--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # Site
 title: NexT
 subtitle:
-description:
+description: Shore
 author: John Doe
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
-language: en
+language: zh-Hans
 date_format: '%Y-%m-%d'
 
 # URL
