modify the personal info

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # Site
 title: Shore Space
 subtitle:
-description: C/Python/通信/SDN/云计算
+description: C/Python/通信/云计算/Docker/K8S
 author: Shore
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: zh-Hans
