--- a/_config.yml
+++ b/_config.yml
@@ -235,7 +235,7 @@ social_icons:
 
 # Sidebar Avatar
 # in directory: /assets/images/shore_robot_logo.png
-#avatar:
+avatar: /assets/images/shore_robot_logo.png
 
 
 # Table Of Contents in the Sidebar
